RESOLVED FIXED198074
REGRESSION(r245540): ASSERTION FAILED: identifier.isNull() || RunLoop::isMain()
https://bugs.webkit.org/show_bug.cgi?id=198074
Summary REGRESSION(r245540): ASSERTION FAILED: identifier.isNull() || RunLoop::isMain()
Sihui Liu
Reported 2019-05-21 09:07:02 PDT
..
Attachments
Patch (1.53 KB, patch)
2019-05-21 09:08 PDT, Sihui Liu
no flags
Patch (1.54 KB, patch)
2019-05-21 09:11 PDT, Sihui Liu
no flags
Patch (1.54 KB, patch)
2019-05-21 09:16 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-05-21 09:08:12 PDT
Sihui Liu
Comment 2 2019-05-21 09:11:57 PDT
Sihui Liu
Comment 3 2019-05-21 09:16:16 PDT
WebKit Commit Bot
Comment 4 2019-05-21 10:08:03 PDT
Comment on attachment 370322 [details] Patch Clearing flags on attachment: 370322 Committed r245569: <https://trac.webkit.org/changeset/245569>
WebKit Commit Bot
Comment 5 2019-05-21 10:08:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-05-21 10:09:20 PDT
Note You need to log in before you can comment on or make changes to this bug.