REGRESSION(r245540): ASSERTION FAILED: identifier.isNull() || RunLoop::isMain() https://bugs.webkit.org/show_bug.cgi?id=198074

Reviewed by Youenn Fablet.

* NetworkProcess/WebStorage/LocalStorageDatabaseTracker.cpp:
(WebKit::LocalStorageDatabaseTracker::databasePath const):


Canonical link: https://commits.webkit.org/212162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245569 268f45cc-cd09-0410-ab3c-d52691b4dbfc